[update] add thymleaf

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1> Welcome to My web</h1>
+    <a href="/reservations">Room Reservation</a>
 </body>
 </html>
