[update] add rest api

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1> Welcome to My web</h1>
     <a href="/reservations">Room Reservation</a>
+    <a href="/guests">Hotel Guests</a>
 </body>
 </html>
